[gd_scene load_steps=5 format=3 uid="uid://cw2xtiw1miap6"]

[ext_resource type="Script" path="res://Towers/Test_Tower.gd" id="1_mnc3f"]
[ext_resource type="Texture2D" uid="uid://cdh804vgjp2jd" path="res://icon.svg" id="2_ops4x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fudr"]
size = Vector2(131, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnhwo"]
size = Vector2(836, 100)

[node name="Test_Tower" type="Area2D"]
script = ExtResource("1_mnc3f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_4fudr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(1, 0.8125)
texture = ExtResource("2_ops4x")

[node name="ShotPosition" type="Node2D" parent="Sprite2D"]

[node name="Aggro Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro Range"]
position = Vector2(498, -2)
shape = SubResource("RectangleShape2D_bnhwo")

[node name="Shot timer" type="Timer" parent="."]
autostart = true

[node name="Shots" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Aggro Range" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggro Range" to="." method="_on_aggro_range_area_exited"]
[connection signal="timeout" from="Shot timer" to="." method="_on_shot_timer_timeout"]
